chore: coc en Don't -> Do not

--- a/public/locales/en/coc.json
+++ b/public/locales/en/coc.json
@@ -17,20 +17,20 @@
   "titleParticipantsStatement1Unit2": "Please work toward safe events so that everyone feels like they are in a safe and trusted community.",
   "titleParticipantsStatement1Unit2Sub1": "Be careful not to make unnecessary physical contact with others.",
   "titleParticipantsStatement1Unit2Sub1Unit1": "Examples: Holding hands or shoulder to shoulder without consent, etc.",
-  "titleParticipantsStatement1Unit2Sub2": "Don't include swear words, profanity, or slang in your conversations.",
+  "titleParticipantsStatement1Unit2Sub2": "Do not include swear words, profanity, or slang in your conversations.",
   "titleParticipantsStatement1Unit2Sub2Unit1": "Even if you're having this conversation with a close acquaintance, you may be making others around you feel uncomfortable or threatened.",
-  "titleParticipantsStatement1Unit2Sub3": "Don't intimidate others by losing your temper, making aggressive gestures, or raising your voice.",
+  "titleParticipantsStatement1Unit2Sub3": "Do not intimidate others by losing your temper, making aggressive gestures, or raising your voice.",
   "titleParticipantsStatement1Unit2Sub4": "Do not use verbal language, non-verbal behavior, or any form of sexual objectification that the other person may find offensive.",
-  "titleParticipantsStatement1Unit2Sub5": "Don't carry anything that could cause harm to others or instill a similar sense of fear.",
+  "titleParticipantsStatement1Unit2Sub5": "Do not carry anything that could cause harm to others or instill a similar sense of fear.",
   "titleParticipantsStatement1Unit2Sub5Unit1": "Baseball bats, chemicals, firearms, etc.",
-  "titleParticipantsStatement1Unit2Sub6": "Don't touch other people's belongings without their consent.",
+  "titleParticipantsStatement1Unit2Sub6": "Do not touch other people's belongings without their consent.",
   "titleParticipantsStatement1Unit2Sub6Unit1": "Phone, laptop, bag, etc.",
   "titleParticipantsStatement1Unit2Sub6Unit2": "Disability aids (hearing aids, wheelchairs, etc.)",
-  "titleParticipantsStatement1Unit2Sub7": "Don't do anything that breaks the law.",
+  "titleParticipantsStatement1Unit2Sub7": "Do not do anything that breaks the law.",
   "titleParticipantsStatement1Unit2Sub8": "Do not take any action that encourages or facilitates any of the above behaviors.",
   "titleParticipantsStatement1Unit2Sub9": "Do not impersonate the organizing committee or spread false information.",
   "titleParticipantsStatement1Unit3": "Please communicate with respect.",
-  "titleParticipantsStatement1Unit3Sub1": "Always use respectful language. Don't use language that may make others feel uncomfortable or that is discriminatory.",
+  "titleParticipantsStatement1Unit3Sub1": "Always use respectful language. Do not use language that may make others feel uncomfortable or that is discriminatory.",
   "titleParticipantsStatement1Unit3Sub1Unit1": "\"If you're a non-technical person, you don't know this stuff\"",
   "titleParticipantsStatement1Unit3Sub1Unit2": "\"I don't like OO languages because they're backwards or legacy\"",
   "titleParticipantsStatement1Unit3Sub2": "At events and in channels, address everyone with respect and use \"Mr. or Mrs. XX\".",
