--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,5 +23,6 @@
   "moreTopics": "Check out these other topics!",
   "readTopics": "Hear the speakers' deep and varied experiences with the Go language and join them on our journey.",
   "sponsorTitle": "GopherCon Korea 2023 is here today because of you.",
-  "goToWebsite": "Go to website"
+  "goToWebsite": "Go to website",
+  "liveTitle": "GopherCon Korea 2023, the first big event for Go language users in Korea"
 }
