--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -23,5 +23,6 @@
   "moreTopics": "다른 토픽도 둘러보세요!",
   "readTopics": "발표자 분들의 깊고 다양한 Go 언어 사용 경험을 들어보고, Go의 여정에 함께하세요.",
   "sponsorTitle": "당신이 있기에 오늘 GopherCon Korea 2023이 있습니다.",
-  "goToWebsite": "홈페이지 바로가기"
+  "goToWebsite": "홈페이지 바로가기",
+  "liveTitle": "국내에서 진행되는 Go 언어 사용자를 위한 최초의 거대 행사 GopherCon Korea 2023"
 }
