--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -24,5 +24,13 @@
   "readTopics": "발표자 분들의 깊고 다양한 Go 언어 사용 경험을 들어보고, Go의 여정에 함께하세요.",
   "sponsorTitle": "당신이 있기에 오늘 GopherCon Korea 2023이 있습니다.",
   "goToWebsite": "홈페이지 바로가기",
-  "liveTitle": "국내에서 진행되는 Go 언어 사용자를 위한 최초의 거대 행사 GopherCon Korea 2023"
+  "liveTitle": "국내에서 진행되는 Go 언어 사용자를 위한 최초의 거대 행사 GopherCon Korea 2023",
+  "subway": "· 지하철로 오는 법",
+  "bus": "· 버스로 오는 법",
+  "lostAndFound": "분실물",
+  "etc": "기타 행사 관련 문의",
+  "subwayDescription": "2호선 건대입구역 · 5호선 군자역에서 환승 후, 7호선 세종대역(어린이대공원역) 하차 후 6번 출구",
+  "busDescription" : "어린이대공원 파랑(간선) 721 초록(지선) 119, 3216, 4212 화양리 파랑(간선) 240, 320 초록(지선) 2222, 3217, 3220 빨강(광역) 102 후문(세종초) 파랑(간선) 240 초록(지선) 2012, 2013",
+  "email": "· 이메일",
+  "kakaoPlus": "· 카카오톡 플러스친구"
 }
