--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -25,8 +25,8 @@
   "sponsorTitle": "GopherCon Korea 2023 is here today because of you.",
   "goToWebsite": "Go to website",
   "liveTitle": "GopherCon Korea 2023, the first big event for Go language users in Korea",
-  "subway": "· Subway",
-  "bus": "· Bus",
+  "subway": "Subway",
+  "bus": "Bus",
   "lostAndFound": "Lost and Found",
   "etc": "Other event inquiries",
   "subwayDescription": "Line 2, Geon University - Transfer at Line 5, Gunja Station, get off at Line 7, Sejongdae Station (Children's University Park Station) and exit 6",
