--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -25,8 +25,8 @@
   "sponsorTitle": "당신이 있기에 오늘 GopherCon Korea 2023이 있습니다.",
   "goToWebsite": "홈페이지 바로가기",
   "liveTitle": "국내에서 진행되는 Go 언어 사용자를 위한 최초의 거대 행사 GopherCon Korea 2023",
-  "subway": "· 지하철로 오는 법",
-  "bus": "· 버스로 오는 법",
+  "subway": "지하철로 오는 법",
+  "bus": "버스로 오는 법",
   "lostAndFound": "분실물",
   "etc": "기타 행사 관련 문의",
   "subwayDescription": "2호선 건대입구역 · 5호선 군자역에서 환승 후, 7호선 세종대역(어린이대공원역) 하차 후 6번 출구",
