Fix : contact design

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,6 +31,6 @@
   "etc": "Other event inquiries",
   "subwayDescription": "Line 2, Geon University - Transfer at Line 5, Gunja Station, get off at Line 7, Sejongdae Station (Children's University Park Station) and exit 6",
   "busDescription": "Children's University Park Blue (main line) 721 Green (branch line) 119, 3216, 4212 Hwayangni Blue (main line) 240, 320 Green (branch line) 2222, 3217, 3220 Red (wide area) 102 Huamun (Sejongcho) Blue (main line) 240 Green (branch line) 2012, 2013",
-  "email": "· email",
+  "email": "· Email",
   "kakaoPlus": "· KakaoTalk Plus Friend"
 }
