--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-  "address": "Sejong Univ, Daeyang AI Center, 12F, 209, Neungdong-ro, Gwangjin-gu, Seoul, South Korea",
+  "address": "Sejong Univ, Daeyang AI Center, 12F,\n 209, Neungdong-ro, Gwangjin-gu, Seoul, South Korea",
   "eventDesc": "Hi there!, It's Golang Korea.\nIn the summer of 2023, GopherCon, the biggest event for Go language users in South Korea, will be held for the first time in Korea! 🎉\n\nThe theme of GopherCon Korea 2023 is \"Go in-depth,\" and there will be a variety of sessions that will give you an inside look at the Go language and how to use it.",
   "copyright1": "The first in Korea",
   "copyright2": "The largest in Korea",
